--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.carlspring.strongbox</groupId>
     <artifactId>strongbox-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-PR-60-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Strongbox: Parent</name>
@@ -103,6 +103,10 @@
         <version.semver>0.9.34-SNAPSHOT</version.semver>
         <version.springfox>2.9.2</version.springfox>
         <version.redline>1.2.9</version.redline>
+        
+        <verion.cassandra>3.11.4</verion.cassandra>
+        <verion.tinkerpop>3.4.4</verion.tinkerpop>
+        
         <!-- Version properties. -->
         <surefireArgLine/>
         <failsafeArgLine/>
@@ -1347,6 +1351,50 @@
                 <groupId>io.reactivex.rxjava2</groupId>
                 <artifactId>rxjava</artifactId>
                 <version>2.2.11</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.tinkerpop</groupId>
+                <artifactId>gremlin-core</artifactId>
+                <version>${verion.tinkerpop}</version>
+            </dependency>            
+            <dependency>
+                <groupId>org.apache.tinkerpop</groupId>
+                <artifactId>gremlin-driver</artifactId>
+                <version>${verion.tinkerpop}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tinkerpop</groupId>
+                <artifactId>gremlin-server</artifactId>
+                <version>${verion.tinkerpop}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tinkerpop</groupId>
+                <artifactId>gremlin-groovy</artifactId>
+                <version>${verion.tinkerpop}</version>
+            </dependency>
+    
+            <dependency>
+                <groupId>org.opencypher.gremlin</groupId>
+                <artifactId>cypher-gremlin-neo4j-driver</artifactId>
+                <version>1.0.4</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opencypher.gremlin</groupId>
+                <artifactId>cypher-gremlin-server-plugin</artifactId>
+                <version>1.0.4</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-neo4j</artifactId>
+                <version>5.2.1.RELEASE</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.neo4j</groupId>
+                        <artifactId>neo4j-ogm-bolt-driver</artifactId>                    
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
 
